@@ -1,3 +1,7 @@
+2005-10-15	Anthony Kozar	<anthonykozar@sbcglobal.net>
+	* Top/csmodule.c:  Implemented csoundOpenLibrary, csoundCloseLibrary,
+	  and csoundGetLibrarySymbol for platform (mac_classic).
+
 2005-10-13  John ff  <jpff@codemist.co.uk>
 
 	* InOut/OSCrecv.c: Many changes to allow listening on multiple
